Added direction setting